--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,4 +1,18 @@
 - sitename: GitHub
-  name: HuangYouzhong
+  name: https://github.com/YouzhongHuang
   url: https://github.com/YouzhongHuang
+
+- sitename: Email
+  name: huangyouzhong@hotmail.com
+  url: huangyouzhong@hotmail.com
+
+- sitename: WeChat
+  name: 131 6217 1980
+  url: 131 6217 1980
+
+- sitename: Phone
+  name: (+86) 131 6217 1980
+  url: (+86) 131 6217 1980
+
+
 
