--- a/_data/social.yml
+++ b/_data/social.yml
@@ -7,8 +7,8 @@
   url: huangyouzhong@hotmail.com
 
 - sitename: WeChat
-  name: 131 6217 1980
-  url: 131 6217 1980
+  name: 13162171980
+  url: 13162171980
 
 - sitename: Phone
   name: (+86) 131 6217 1980
