--- a/_config.yml
+++ b/_config.yml
@@ -98,10 +98,10 @@ gitment:
         client_secret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
 # https://github.com/gitalk/gitalk#install
 gitalk:
-    owner: mzlogin
-    repo: blog-comments
-    clientID: d2e1cbbd298958076462
-    clientSecret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
+    owner: YouzhongHuang
+    repo: YouzhongHuang.github.io
+    clientID: 8edcc9362d77b5017e3d
+    clientSecret: 47e6830eb171963ba08b3c46001f831b450ac38d
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : false
 
