--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl:
 url: https://youzhonghuang.github.io
 date_format: "ordinal"
-title: Leon
+title: ""
 subtitle: "优雅编码的艺术"
 description: ""
 keywords: "ML | HPC"
